--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
       <div id="inauguration-carousel" class="carousel slide carousel-fade" data-ride="false">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="inauguration-image" src="images/Inauguration/1.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/1.JPG" alt="">
           </div>
           <div class="carousel-item">
             <img class="inauguration-image" src="images/Inauguration/DSC_0721.jpg" alt="">
