--- a/gallery.html
+++ b/gallery.html
@@ -68,70 +68,70 @@
             <img class="inauguration-image" src="images/Inauguration/1.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/DSC_0721.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/DSC_0721.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/2.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/2.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/3.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/3.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/4.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/4.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/5.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/5.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/6.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/6.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/7.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/7.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/8.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/8.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/9.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/9.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/10.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/10.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/11.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/11.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/12.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/12.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/13.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/13.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/14.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/14.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/15.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/15.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/16.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/16.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/17.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/17.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/18.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/18.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/19.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/19.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/20.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/20.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/21.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/21.JPG" alt="">
           </div>
           <div class="carousel-item">
-            <img class="inauguration-image" src="images/Inauguration/22.jpg" alt="">
+            <img class="inauguration-image" src="images/Inauguration/22.JPG" alt="">
           </div>
         </div>
         <a class="carousel-control-prev" href="#inauguration-carousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
