--- a/gallery.html
+++ b/gallery.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="hearing-loss.html#hearing-loss-info">Hearing Loss</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#footer">Contact</a>
+                <a class="nav-link" href="index.html#cta">Contact</a>
               </li>
             </ul>
           </div>
