--- a/hearing-loss.html
+++ b/hearing-loss.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="gallery.html#gallery">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="index.html#footer">Contact</a>
+                <a class="nav-link" href="index.html#cta">Contact</a>
               </li>
             </ul>
           </div>
