Testimonial Section Added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="hearing-loss.html#hearing-loss-info">Hearing Loss</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#footer">Contact</a>
+                <a class="nav-link" href="#cta">Contact</a>
               </li>
             </ul>
           </div>
@@ -152,9 +152,25 @@
       </p>
     </section>
 
-    <!-- Testimonials
+    <!-- Testimonials -->
     <section id="testimonials">
-    </section> -->
+      <div id="testimonial-carousel" class="carousel slide" data-ride="false">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <h2>They are quite empathetic and cooperative. I was able to tell them all my concerns and they listened patiently to everything.</h2>
+            <img class="testimonial-image" src="images/testimonial 1.jpeg" alt="saroj-mittal-profile">
+            <em>Smt. Saroj Bala Mittal</em>
+          </div>
+          <div class="carousel-item">
+            <h2 class="testimonial-text">I purchased hearing aids for my father from Brahmani Hearing Care Clinic. I am fully satisfied with their service. I also appreciate their team for their quick responses and follow-ups.</h2>
+            <img class="testimonial-image" src="images/testimonial 2.jpeg" alt="kapil-saluja-profile">
+            <em>Mr. Kapil Saluja</em>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev"><span class="carousel-control-prev-icon"></span></a>
+        <a class="carousel-control-next" href="#testimonial-carousel" role="button" data-slide="next"><span class="carousel-control-next-icon"></span></a>
+      </div>
+    </section>
 
     <!-- CTA -->
     <section id="cta">
@@ -166,11 +182,11 @@
     </section>
 
     <!-- Footer -->
-    <footer id="footer">
-      <a href="https://www.facebook.com/pages/category/Medical---Health/Hearing-Care-Clinic-Brahmani-102518118516105/"><i class="social-icon fab fa-facebook-f"></i></a>
-      <a href="#"><i class="social-icon fab fa-twitter"></i></a>
-      <a href="#"><i class="social-icon fab fa-instagram"></i></a>
-      <!-- <a href="#"><i class="social-icon fas fa-envelope"></i></a> -->
+    <footer id="footer-index">
+      <a href="https://www.facebook.com/pages/category/Medical---Health/Hearing-Care-Clinic-Brahmani-102518118516105/"><i class="social-icon-index fab fa-facebook-f"></i></a>
+      <a href="#"><i class="social-icon-index fab fa-twitter"></i></a>
+      <a href="#"><i class="social-icon-index fab fa-instagram"></i></a>
+      <!-- <a href="#"><i class="social-icon-index fas fa-envelope"></i></a> -->
       <p>© Copyright 2021 Brahmani Hearing Care Clinic</p>
       <p>Made with ♡ by Chandan and Shashank.</p>
     </footer>
